fixed btn alignment and other style details

--- a/app/assets/stylesheets/components/_chat_index_card.scss
+++ b/app/assets/stylesheets/components/_chat_index_card.scss
@@ -6,7 +6,7 @@
   margin-bottom: 8px;
   padding: 8px;
   padding-right: 8px;
-  padding-left: 15px;
+  padding-left: 8px;
   border: 1px solid rgb(235,235,235);
 }
 
@@ -26,6 +26,7 @@
 .chat-index-card-user {
   display: flex;
   padding-left: 8px;
+  padding-top: 8px;
 }
 
 .chat-index-username{
